# first-ade

./: .ade-compliance.yml  .adr  .ci-trigger  .dockerignore  .gitignore  .pre-commit-config.yaml  .wave3-tracking  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  alembic.ini  pyproject.toml  run-checks.ps1
.agent/rules/: speckit-rules.md
.agent/workflows/: pr.md
.github/profile-internal/: README.md
.github/scripts/: audit_specs.py  check_docs_links.py  review_issue.py  verify_commits.py  verify_pr_size.py
.github/workflows/: adhoc-perf-benchmark.yml  adhoc-sys-diagnostic.yml  adr-guardian.yml  broken-links-checker.yml  ci-python-library.yml  ci-python-service.yml  codeql.yml  commit-message-linter.yml  compliance-and-security.yml  dependency-drift.yml  issue-review.yml  main-guard.yml  main.yml  pr-size-gate.yml  security-audit.yml  spec-traceability-auditor.yml  specs-gate.yml
.kiro/specs/ade-compliance-framework/: design.md
.specify/memory/: constitution.md
.windsurf/rules/: specify-rules.md
docs/: AXIOMS.md  CONSTITUTION.md  MANIFESTO.md  METHODOLOGY.md  POSTULATES.md  README.md  adr-guide.md
docs/adr/: XXXX-fail-closed-architecture-for-compliance-enforcement.md  XXXX-local-http-api-evolving-to-mcp.md  XXXX-sqlite-for-local-audit-trail.md  XXXX-three-strictness-levels-for-incremental-adoption.md  XXXX-use-tree-sitter-for-multi-language-parsing.md
docs/decisions/: 0001-adopt-axiom-driven-engineering.md  0002-test-heuristic-enhancement-and-test-coverage.md  0003-harden-default-quality-gate-strictness-to-enforce.md  0004-introduce-automated-spec-traceability-and-security-auditing-pipelines.md  0005-harden-compliance-validation-path-standardisation-and-concurrency.md  0006-refactor-service-layer-with-oop-singleton-and-custom-exceptions.md  0007-integrate-ast-based-forbidden-api-checker-engine.md  XXXX-fail-closed-architecture-for-compliance-enforcement.md  XXXX-local-http-api-evolving-to-mcp.md  XXXX-sqlite-for-local-audit-trail.md  XXXX-three-strictness-levels-for-incremental-adoption.md  XXXX-use-tree-sitter-for-multi-language-parsing.md  adr-guide.md
local-rag/.agent/workflows/: idle-discovery.md
local-rag/chroma_db/: chroma.sqlite3
local-rag/rag_docs/: first_ade_manifesto.txt
local-rag/rag_pipeline/: ingest.py  query.py  requirements.txt
specs/001-ade-compliance/: .speckit.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ade-compliance/checklists/: requirements.md
specs/001-ade-compliance/contracts/: compliance-api.yaml
specs/002-web-portal/: plan.md  spec.md  tasks.md
src/ade_compliance/: __init__.py  cli.py  config.py  exceptions.py  server.py
src/ade_compliance/engines/: __init__.py  adr_engine.py  base.py  forbidden_api_engine.py  spec_engine.py  test_engine.py  trace_engine.py
src/ade_compliance/hooks/: __init__.py  pre_commit.py
src/ade_compliance/migrations/: env.py
src/ade_compliance/models/: __init__.py  axiom.py  decision.py  report.py
src/ade_compliance/observability/: __init__.py  logging.py  metrics.py
src/ade_compliance/services/: __init__.py  attestation.py  audit.py  base.py  crypto.py  db.py  escalation.py  (+2 more)
templates/service/: README.md
tests/integration/: test_cli.py  test_cli_integration.py  test_pre_commit_hook.py  test_server.py
tests/unit/: test_cli_unit.py  test_config.py  test_exceptions.py  test_gha_helpers.py  test_pre_commit_unit.py  test_preflight_api.py
web-portal/: README.md  index.html  learn-foundations.html  learn-methodology.html  learn-practice.html  script.js  styles.css
(+33 files in other folders)
