[project]
name = "ade-compliance"
version = "0.1.0"
description = "ADE Compliance Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.27",
    "tree-sitter>=0.20.4",
    "pyadr>=0.16.1",
    "uvicorn>=0.27.1",
    "pyyaml>=6.0.1",
    "prometheus-client>=0.19.0",
]

[project.scripts]
ade-compliance = "ade_compliance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
# E: pycodestyle errors
# F: Pyflakes
# B: bugbear
# I: isort

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Asyncio tests",
]
