[project]
name = "ade-compliance"
version = "0.1.0"
description = "ADE Compliance Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.49",
    "tree-sitter>=0.20.4",
    "pyadr>=0.16.1",
    "uvicorn>=0.44.0",
    "pyyaml>=6.0.3",
    "prometheus-client>=0.25.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
ade-compliance = "ade_compliance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "templates",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
    "E711", # SQLAlchemy comparison to None
    "E712", # SQLAlchemy comparison to True/False
    "E501", # Line too long
    "B023", # Loop variable binding in function/lambda
    "F841", # Local variable assigned but unused
    "B904", # raise ... from err in except handler
]
# E: pycodestyle errors
# F: Pyflakes
# B: bugbear
# I: isort

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = [
    "type-arg",              # Missing type parameters for generics
    "arg-type",              # SQLAlchemy Column incompatible types
    "assignment",            # SQLAlchemy Column assignments
    "attr-defined",          # SQLAlchemy dynamic attributes
    "call-arg",              # Pydantic / SQLAlchemy keyword args
    "union-attr",            # union types reconfigure
    "import-untyped",        # Library stubs not installed (e.g. yaml)
    "valid-type",            # SQLAlchemy Base class type validation
    "misc",                  # SQLAlchemy Base subclassing
    "var-annotated",         # SQLAlchemy dict type annotations
    "operator",              # SQLAlchemy Column operator overloads (e.g. **)
    "annotation-unchecked"   # Untyped function bodies unchecked
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Asyncio tests",
]
